--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -5,19 +5,29 @@
 
 ; Data server for simulation of device data
 [DataServer]
+id = 21
 ;module = Mast12-calc
 ;module = Mast01
-module = Simulation Sim-2
+module = Simulation
 ;module = Ceilometer
+
+
+[krd-sim]
+id = 22
+module = Simulation
+
 
 ; Reading data and filling in the database
 [Reader]
 id = 1	; Every reader instamce needs an unique ID. The id is also 
 		; used for the monitoring server port of the reader
 ;module = Wolkenkamera
-module = Simulation Sim-2
-samplingTime = 1 min
-;samplingTime = 3 sec
+;module = Simulation Sim-2
+;module = SysCI
+;module = Parsivel
+module = SISOMOP12
+;samplingTime = 1 min
+samplingTime = 10 sec
 
 
 [kcr-sim]
@@ -42,14 +52,16 @@ configDir = ../../etc
 dataDir = /Users/kopmann/data/kitcube
 remoteDir = /home/flating/projekte/kitcube/data
 archiveDir = /Users/kopmann/data/kitcube
-;dbHost = localhost
+dbHost = localhost
 ;dbName = kitcube_actual
 ;dbUser = root
 ;dbPassword = kitcube
 alarmDelay = 20 min
+tmpDir = /Users/kopmann/tmp
+
 
 [Axis]
-axis = A AR AB B C DA DC DN E FC FH FM FV H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V VAR X XG XP XR Z
+axis = A AR AB B C DA DC DN E FC FH FM FV H J KD KED KH KM KMS L LA MA MF MR MS MW N ND NE NF NO NS PA QR R SNR T TA V VAR X XG XP XR Z
 A_name = angle
 A_unit = degree
 AR_name = angle_rate
@@ -78,6 +90,8 @@ FV_name = Covariance
 FV_unit = m^2/s^2
 H_name = Heigth
 H_unit = m
+J_name = Number
+J_unit = #
 KD_name = Duration
 KD_unit = s
 KED_name = Kinetic_Energy_Dissipation
@@ -104,12 +118,16 @@ MW_name = Water_Column
 MW_unit = mm
 N_name = Precipitation
 N_unit = mm
+ND_name = Drop size distribution
+ND_unit = Log10(1/m^3/mm)
 NE_name = Precipitation_rate
 NE_unit = mm/s
 NF_name = Precipitation_rate
 NF_unit = mm/h
 NO_name = No_Unit
 NO_unit = 
+NS_name = Drop speed
+NS_unit = m/s
 PA_name = Air_pressure
 PA_unit = hPa
 QR_name = Quality
@@ -557,7 +575,8 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAX
-datafileMask = messwiese<index>.DAX
+;datafileMask = messwiese<index>.DAX
+datafileMask = hatzenbuehl11_<index>.DAX
 sensorList = EB1.DAX.sensors
 datafileTemplate = M11_01.DAX.template
 samplingTime = 10 min
@@ -612,6 +631,15 @@ datafileMask = messwiese<index>.DAX
 sensorList = EB2.DAX.sensors
 datafileTemplate = M12_01.DAX.template
 samplingTime = 10 min
+
+[SISOMOP12]
+moduleName = SM12
+moduleNumber = 12
+moduleType = sisomop
+moduleComment = Simple Soil Moisture Probe
+sensorGroup = txt
+datafileMask = BodenfeuchteEB2.txt
+sensorList = SM12.txt.sensors
 
 
 ; 20m profile tower
@@ -846,10 +874,10 @@ datafileMask = rd<index>
 samplingTime = 1 min
 
 [Parsivel]
-moduleName = Parsivel
+moduleName = PARS 
 moduleNumber = 30
-moduleType = Parsivel
-moduleComment = Parsivel_comment
+moduleType = Parsivel 
+moduleComment = Rain characteristics
 sensorGroup = dat
 sensorList = parsivel.dat.sensors
 datafileTemplate = p090813.dat.template
@@ -910,6 +938,20 @@ sensorList = wolkenkamera.stat.sensors
 datafileTemplate = 200908261200.stat.template
 datafileMask = kitcube_cc2_<index>.jpg
 samplingTime = 2 min
+
+[CC-test]
+moduleName = CC3
+moduleNumber = 45
+moduleType = Wolkenkamera
+moduleComment = Wolkenkamera_comment
+sensorGroup = jpg
+sensorList = wolkenkamera.jpg.sensors
+datafileTemplate = 200908261200.jpg.template
+dataSubDir = CC3
+datafileMask = kitcube_cc2_<index>.jpg
+samplingTime = 1 min
+
+
 
 
 
@@ -1257,7 +1299,7 @@ samplingTime = 1 sec
 moduleType = SimRandom
 moduleNumber = 199
 alarmDelay =  30 sec
-python = CC2 mean
+;python = CC2 mean
 
 
 [Sim-2]
@@ -1278,4 +1320,13 @@ samplingTime = 1 sec
 
 [SysLog]
 alarmDelay = no
+
+[SysCI]
+moduleType = CSV
+moduleNumber = 120
+moduleName = SysCI
+sensorGroup = txt
+sensorList = sysci.sensors
+datafileMask = sys-ci-<index>.txt
+headerLine = 4
 
