--- a/src/kitcube-devices/Makefile.am
+++ b/src/kitcube-devices/Makefile.am
@@ -17,7 +17,7 @@ libkitcube_devices_a_SOURCES = daqdevice.h daqdevice.cpp createdevice.h createde
 	mrr.h mrr.cpp regenwippe.h regenwippe.cpp wolkenkamera.h wolkenkamera.cpp \
 	scintillometer.cpp scintillometer.h 3m.cpp 3m.h \
 	windtracer.cpp windtracer.h \
-	gps.cpp gps.h \
+	gps.cpp gps.h sisomop.cpp sisomop.cpp \
 	sodar.cpp sodar.h \
 	radiosonde.cpp radiosonde.h \
 	windcube.cpp windcube.h \
