--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -6,5 +6,5 @@ EXTRA_DIST = mast-append-filter cc-append-filter \
 	sci-append-filter \
 	sod-append-filter sod-sync-filter \
 	wtx-append-filter wc-append-filter \
-	rpg-append-filter \
+	rpg-append-filter wippe-append-filter \
 	crontab
