Sync before including compression support

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -24,8 +24,8 @@ id = 1	; Every reader instamce needs an unique ID. The id is also
 ;module = Wolkenkamera
 ;module = Simulation Sim-2
 ;module = SysCI
-;module = Parsivel
-module = SISOMOP12
+module = Parsivel
+;module = SISOMOP12
 ;samplingTime = 1 min
 samplingTime = 10 sec
 
@@ -52,10 +52,11 @@ configDir = ../../etc
 dataDir = /Users/kopmann/data/kitcube
 remoteDir = /home/flating/projekte/kitcube/data
 archiveDir = /Users/kopmann/data/kitcube
-dbHost = localhost
+;dbHost = localhost
+dbHost = ipepdvsrv1
 ;dbName = kitcube_actual
-;dbUser = root
-;dbPassword = kitcube
+dbUser = csa
+dbPassword = midgaard
 alarmDelay = 20 min
 tmpDir = /Users/kopmann/tmp
 
