Introduced KITCUBEDIR and conditions to use the same script with linux and OSX

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -883,6 +883,7 @@ sensorGroup = dat
 sensorList = parsivel.dat.sensors
 datafileTemplate = p090813.dat.template
 datafileMask = p<index>.dat
+compressionType = gz
 samplingTime = 1 min
 
 [MRR]
