--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -8,9 +8,9 @@
 id = 21
 ;module = Mast12-calc
 ;module = Mast01
-module = Simulation
+module = Simulation Ceilometer
 ;module = Ceilometer
-
+sampingTime = 1 sec
 
 [krd-sim]
 id = 22
@@ -21,11 +21,14 @@ module = Simulation
 [Reader]
 id = 1	; Every reader instamce needs an unique ID. The id is also 
 		; used for the monitoring server port of the reader
+;module = Ceilometer-dat
 ;module = Wolkenkamera
+;module = Regenwippe
 ;module = Simulation Sim-2
 ;module = SysCI
-module = Parsivel
+;module = Parsivel
 ;module = SISOMOP12
+module = RS2
 ;samplingTime = 1 min
 samplingTime = 10 sec
 
@@ -51,12 +54,12 @@ samplingTime = 5 sec
 configDir = ../../etc
 dataDir = /Users/kopmann/data/kitcube
 remoteDir = /home/flating/projekte/kitcube/data
-archiveDir = /Users/kopmann/data/kitcube
-;dbHost = localhost
-dbHost = ipepdvsrv1
-;dbName = kitcube_actual
-dbUser = csa
-dbPassword = midgaard
+archiveDir = /Users/kopmann/data/kitcube/archive
+dbHost = localhost
+;dbHost = ipepdvsrv1
+dbName = kitcube_active
+;dbUser = csa
+;dbPassword = midgaard
 alarmDelay = 20 min
 tmpDir = /Users/kopmann/tmp
 
@@ -634,13 +637,13 @@ datafileTemplate = M12_01.DAX.template
 samplingTime = 10 min
 
 [SISOMOP12]
-moduleName = SM12
+moduleName = EB2
 moduleNumber = 12
 moduleType = sisomop
 moduleComment = Simple Soil Moisture Probe
-sensorGroup = txt
+sensorGroup = SM
 datafileMask = BodenfeuchteEB2.txt
-sensorList = SM12.txt.sensors
+sensorList = SISOMOP.txt.sensors
 
 
 ; 20m profile tower
@@ -823,13 +826,13 @@ samplingTime = 0.03125 sec
 [Ceilometer]
 moduleType = Ceilometer
 moduleNumber = 20
-moduleName = Ceilometer
+moduleName = CM
 moduleComment = Ceilometer
 sensorGroup = chm
 datafileMask = 20<index>.chm
 datafileTemplate = 20090625.chm.template
 sensorList = 20090625.chm.sensors
-samplingTime = 1 sec
+samplingTime = 30 sec
 
 [Ceilometer-nc]
 moduleType = Ceilometer
@@ -844,7 +847,8 @@ samplingTime = 1 min
 
 [Ceilometer-dat]
 moduleType = Ceilometer
-moduleNumber = 23
+moduleName = CM
+moduleNumber = 20
 sensorGroup = dat
 sensorList = 20090625.chm.sensors
 datafileTemplate = 20090625.chm.template
@@ -909,7 +913,7 @@ datafileMask = p<index>.dat
 samplingTime = 1 min
 
 [Regenwippe]
-moduleName = Regenwippe
+moduleName = RGW
 moduleNumber = 40
 moduleType = Regenwippe
 moduleComment = Regenwippe_comment
@@ -920,24 +924,25 @@ datafileMask = w20<index>.dat
 samplingTime = 1 min
 
 [Wolkenkamera]
-moduleName = CC2
+moduleName = CC4
 moduleNumber = 45
 moduleType = Wolkenkamera
-moduleComment = Wolkenkamera_comment
+moduleComment = Cloud camera
 sensorGroup = jpg
 sensorList = wolkenkamera.jpg.sensors
-datafileTemplate = 200908261200.jpg.template
 datafileMask = kitcube_cc2_<index>.jpg
 samplingTime = 2 min
+;pythonDir = /Users/kopmann/src/kitcube/kitcube-tools/src/kitcube-reader
+python = CC2 mean
 
-[Wolkenkamera]
+
+[Wolkenkamera-stat]
 moduleName = CC2
 moduleNumber = 45
 moduleType = Wolkenkamera.statistic
 moduleComment = Wolkenkamera_comment
 sensorGroup = stat 
 sensorList = wolkenkamera.stat.sensors
-datafileTemplate = 200908261200.stat.template
 datafileMask = kitcube_cc2_<index>.jpg
 samplingTime = 2 min
 
@@ -1081,13 +1086,13 @@ samplingTime = 8 sec
 
 [RS2]
 moduleName = RS2
-moduleNumber = 76
+moduleNumber = 75
 moduleType = radiosonde
 moduleComment = rs_comment
 sensorGroup = txt
 sensorList = rs2.txt.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = Hatzenbuehl_Radiosonde_<index>.txt
+datafileMask = neu_COR_<index>utc.txt
 samplingTime = 8 sec
 
 
@@ -1302,7 +1307,7 @@ moduleType = SimRandom
 moduleNumber = 199
 alarmDelay =  30 sec
 ;python = CC2 mean
-
+samplingTime = 20 sec
 
 [Sim-2]
 moduleType = SimRandom
