--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -7,4 +7,4 @@ EXTRA_DIST = mast-append-filter cc-append-filter \
 	sod-append-filter sod-sync-filter \
 	wtx-append-filter wc-append-filter \
 	rpg-append-filter wippe-append-filter \
-	crontab
+	backup-exclude crontab
