--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = akutil kitcube-devices kitcube-data kitcube-reader
+SUBDIRS = akutil kitcube-devices kitcube-data kitcube-reader bsddate
 
 EXTRA_DIST = fdhwlib.h
 
