--- a/src/kitcube-data/Makefile.am
+++ b/src/kitcube-data/Makefile.am
@@ -15,3 +15,15 @@ INCLUDES= $(all_includes)
 # the library search path.
 kitcube_data_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) $(PYTHON_LIBS) -L../akutil -L../kitcube-devices \
 			-lkitcube-devices -lakutil $(ICONV_LIBS) -lnetcdf -lnetcdf_c++
+
+
+# Make copies of the reader for startup scriptes
+LINKS = kcd-mast 
+all: $(LINKS)
+
+$(LINKS): kitcube-data
+	rm -f $@ 
+	ln $< $@
+
+
+
