--- a/src/kitcube-devices/Makefile.am
+++ b/src/kitcube-devices/Makefile.am
@@ -17,14 +17,14 @@ libkitcube_devices_a_SOURCES = daqdevice.h daqdevice.cpp createdevice.h createde
 	mrr.h mrr.cpp regenwippe.h regenwippe.cpp wolkenkamera.h wolkenkamera.cpp \
 	scintillometer.cpp scintillometer.h 3m.cpp 3m.h \
 	windtracer.cpp windtracer.h \
-	gps.cpp gps.h sisomop.cpp sisomop.cpp \
+	gps.cpp gps.h sisomop.cpp sisomop.h \
 	sodar.cpp sodar.h \
 	radiosonde.cpp radiosonde.h \
 	windcube.cpp windcube.h \
 	hatpro.cpp hatpro.h \
 	syslog.h syslog.cpp lara.h lara.cpp \
 	orcaprocess.h orcaprocess.cpp \
-	endian-osx.h
+	endian-osx.h 
 
 
 libkitcube_devices_a_CXXFLAGS =
