--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -198,7 +198,7 @@ moduleNumber = 1
 moduleType = Mast
 moduleComment = Turbulence_mast_1
 sensorGroup = DAL
-datafileMask = messwiese<index>.DAL
+datafileMask = Corte<index>.DAL
 sensorList = T01.DAL.sensors
 datafileTemplate = M11_01.DAL.template
 samplingTime = 1 sec
@@ -210,7 +210,7 @@ moduleNumber = 1
 moduleType = Mast
 moduleComment = Turbulence_mast_1
 sensorGroup = DAR
-datafileMask = messwiese<index>.DAR
+datafileMask = Corte<index>.DAR
 sensorList = T01.DAR.sensors
 datafileTemplate = M11_01.DAR.template
 samplingTime = 10 min
@@ -555,7 +555,7 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAL
-datafileMask = messwiese<index>.DAL
+datafileMask = hatzenbuehl11_<index>.DAL
 sensorList = EB1.DAL.sensors
 datafileTemplate = M11_01.DAL.template
 samplingTime = 1 sec
@@ -567,7 +567,7 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAR
-datafileMask = messwiese<index>.DAR
+datafileMask = hatzenbuehl11_<index>.DAR
 sensorList = EB1.DAR.sensors
 datafileTemplate = M11_01.DAR.template
 samplingTime = 10 min
