--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -3,6 +3,7 @@
 
 
 EXTRA_DIST = mast-append-filter cc-append-filter \
+	eb1-append-filter-sm eb2-append-filter-sm \
 	sci-append-filter \
 	sod-append-filter sod-sync-filter \
 	wtx-append-filter wc-append-filter \
