--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -6,8 +6,8 @@ EXTRA_DIST = sync_files.sh sync_append.sh sync_flat.sh \
 	split_flatdir.sh date.py \
 	sync_push.sh report_alarm.sh \
 	resize_cc2.sh wget_files.sh \
-	chk_alarm.sh send_heartbeat.sh \
-	push_backup.sh push-CC2.cgi \
+	acq_cistatus.sh chk_alarm.sh send_heartbeat.sh \
+	push_backup.sh push_cc2.py \
 	export_archive.sh  
 
 
