Improved parser for RS-class, added push mode to sync_files.sh

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -642,8 +642,8 @@ moduleNumber = 12
 moduleType = sisomop
 moduleComment = Simple Soil Moisture Probe
 sensorGroup = SM
-datafileMask = BodenfeuchteEB2.txt
-sensorList = SISOMOP.txt.sensors
+datafileMask = BodenfeuchteEB2.txt.broken
+sensorList = SM12.txt.sensors
 
 
 ; 20m profile tower
@@ -924,13 +924,25 @@ datafileMask = w20<index>.dat
 samplingTime = 1 min
 
 [Wolkenkamera]
-moduleName = CC4
+moduleName = CC2
 moduleNumber = 45
 moduleType = Wolkenkamera
 moduleComment = Cloud camera
 sensorGroup = jpg
 sensorList = wolkenkamera.jpg.sensors
 datafileMask = kitcube_cc2_<index>.jpg
+samplingTime = 2 min
+;pythonDir = /Users/kopmann/src/kitcube/kitcube-tools/src/kitcube-reader
+python = CC2 mean
+
+[CC1]
+moduleName = CC1
+moduleNumber = 46
+moduleType = Wolkenkamera
+moduleComment = Cloud camera
+sensorGroup = jpg
+sensorList = wolkenkamera.jpg.sensors
+datafileMask = kitcube_cc1_<index>.jpg
 samplingTime = 2 min
 ;pythonDir = /Users/kopmann/src/kitcube/kitcube-tools/src/kitcube-reader
 python = CC2 mean
@@ -1086,13 +1098,13 @@ samplingTime = 8 sec
 
 [RS2]
 moduleName = RS2
-moduleNumber = 75
+moduleNumber = 76
 moduleType = radiosonde
 moduleComment = rs_comment
 sensorGroup = txt
 sensorList = rs2.txt.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = neu_COR_<index>utc.txt
+datafileMask = COR_<index>utc.txt
 samplingTime = 8 sec
 
 
