--- a/etc/katrin.ini
+++ b/etc/katrin.ini
@@ -23,7 +23,7 @@ project = katrin
 configDir = ../../etc
 dataDir = ../../../data
 remoteDir = ../../../data
-archiveDir = /Users/kopmann/Data/katrin
+archiveDir = /Users/kopmann/Data/katrin/001/PAC
 ;dbHost = localhost
 dbName = KATRIN_File_Reader // ORCA Slow Control ???
 ;dbUser = root
@@ -85,6 +85,7 @@ moduleComment = FPD Preamplifier Controller
 sensorGroup = dat
 sensorList = pac.sensors
 datafileMask = pac-<index>
+dataSubDir =
 
 [Lara]
 moduleType = Lara
