--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -28,7 +28,8 @@ id = 1	; Every reader instamce needs an unique ID. The id is also
 ;module = SysCI
 ;module = Parsivel
 ;module = SISOMOP12
-module = RS2
+;module = RS2
+module = 3M1-data
 ;samplingTime = 1 min
 samplingTime = 10 sec
 
@@ -684,7 +685,9 @@ moduleComment = 3M_data
 sensorGroup = data
 sensorList = 3M1.data.sensors
 datafileTemplate = data.csv.template
-datafileMask = M1_Hatzenbuehl_<index>_data.csv
+;datafileMask = M1_Hatzenbuehl_<index>_data.csv
+datafileMask = [000001]_<index>_data.csv
+datafileIndexFormat = %Y-%m-%d
 samplingTime = 5 sec
 
 ; GPS coordinates
@@ -696,7 +699,8 @@ moduleComment = 3M_gps
 sensorGroup = gps
 sensorList = 3M1.gps.sensors
 datafileTemplate = data.csv.template
-datafileMask = M1_Hatzenbuehl_<index>_gps.csv
+;datafileMask = M1_Hatzenbuehl_<index>_gps.csv
+datafileMask = [000001]_<index>_gps.csv
 samplingTime = 60 min
 
 ; wind data
@@ -708,7 +712,8 @@ moduleComment = 3M_sonic
 sensorGroup = sonic
 sensorList = 3M1.sonic.sensors
 datafileTemplate = data.csv.template
-datafileMask = M1_Hatzenbuehl_<index>_sonic.csv
+;datafileMask = M1_Hatzenbuehl_<index>_sonic.csv
+datafileMask = [000001]_<index>_sonic.csv
 samplingTime = 0.03125 sec
 
 
