--- a/configure.in
+++ b/configure.in
@@ -7,8 +7,8 @@ AM_INIT_AUTOMAKE(kitcube-tools, 0.33)
 
 AC_LANG_CPLUSPLUS
 # LIBTOOL sometimes produces no binary files on OSX
-#AM_PROG_LIBTOOL
-AC_PROG_RANLIB
+AM_PROG_LIBTOOL
+#AC_PROG_RANLIB
 
 dnl
 dnl Add the base include directory
