add hatpro module

--- a/src/kitcube-devices/Makefile.am
+++ b/src/kitcube-devices/Makefile.am
@@ -25,6 +25,7 @@ libkitcube_devices_a_SOURCES = daqdevice.h daqdevice.cpp createdevice.h createde
 	syslog.h syslog.cpp lara.h lara.cpp \
 	orcaprocess.h orcaprocess.cpp \
 	campbelltoa5.h campbelltoa5.cpp \ 
+	hatpro.h hatpro.cpp \
 	endian-osx.h 
 
 
