Added group ids for EBM masts; implemented whitelist fiór backup script

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -5,9 +5,9 @@
 EXTRA_DIST = sync_files.sh sync_append.sh sync_flat.sh \
 	split_flatdir.sh date.py \
 	sync_push.sh report_alarm.sh \
-	resize_cc2.sh wget_files.sh \
+	resize_cc.sh wget_files.sh \
 	acq_cistatus.sh chk_alarm.sh send_heartbeat.sh \
-	push_backup.sh push_cc2.py \
+	push_backup.sh push_backup_wl.sh push_cc.py \
 	export_archive.sh  
 
 
